# axisfuzzy

./: .czrc  .gitignore  .readthedocs.yaml  CONTRIBUTING.md  LICENSE  README.md  README_zh.md  pyproject.toml
.github/: copilot-instructions.md
.github/instructions/: axisfuzzy.instructions.md  overall-project-instructions.instructions.md
.github/prompts/: overall-project-prompt.prompt.md
.github/workflows/: publish-to-pypi.yml  python-publish.yml  read-the-docs.yml
axisfuzzy/: __init__.py  __init__.pyi  version.py
axisfuzzy/analysis/: __init__.py  __init__.pyi  _contracts.py  _pipeline.py  accessor.py  build_in.py  contracts.py  pipeline.py
axisfuzzy/config/: __init__.py  __init__.pyi  api.py  api.pyi  config_file.py  manager.py
axisfuzzy/core/: __init__.py  __init__.pyi  _base.py  _fuzzarray.py  _triangular.py  backend.py  base.py  cache.py  dispatcher.py  factory.py  fuzzarray.py  fuzzarray.pyi  fuzznums.py  fuzznums.pyi  operation.py  registry.py  registry.pyi  triangular.py
axisfuzzy/extension/: __init__.py  __init__.pyi  decorator.py  decorator.pyi  dispatcher.py  dispatcher.pyi  injector.py  registry.py
axisfuzzy/fuzzifier/: __init__.py  __init__.pyi  fuzzifier.py  fuzzifier.pyi  registry.py  strategy.py
axisfuzzy/fuzzify/: __init__.py  __init__.pyi  base.py  fuzzifier.py  fuzzifier.pyi  registry.py
axisfuzzy/fuzztype/: __init__.py
axisfuzzy/membership/: __init__.py  __init__.pyi  base.py  factory.py  factory.pyi  function.py
axisfuzzy/mixin/: __init__.py  __init__.pyi  _function.py  factory.py  register.py  registry.py
axisfuzzy/random/: __init__.py  __init__.pyi  api.py  api.pyi  base.py  registry.py  seed.py
axisfuzzy/utils/: __init__.py  __init__.pyi  deprecated.py  experimental.py
doc/_analysis/: analysis_zh.md
doc/_extension/: extension_en.md
doc/_fuzzify/: todo.md
doc/_mixin/: mixin_en.md
doc/analysis/: analysis_zh.md
doc/axisfuzzy-analysis/: 01_overview.md  02_contracts_deep_dive.md  03_components_and_pipeline.md  04_model_api.md  05_data_structures_and_integration.md  06_usage_and_examples.md
doc/extension/: extension_en.md  extension_zh.md
doc/fuzzify/: fuzzify_en.md  fuzzify_zh.md  todo.md
doc/fuzzy-config/: 01_overview.md  02_config_deep_dive.md  03_usage_and_examples.md
doc/fuzzy-core/: 01_overview.md  04_registry_system.md  (+4 more)
docs/: conf.py  index.rst
fuzzlab/: __init__.py  __init__.pyi
notebook/: draft.1.ipynb  draft.2.ipynb  draft.py  extend_test.py  notebook.ipynb  notebook.ops.test.ipynb  ops_test_file.py
requirements/: README.md  all_requirements.txt  analysis_requirements.txt  core_requirements.txt  dev_requirements.txt  docs_requirements.txt
test/: __init__.py  conftest.py  test_append_factory.py  test_dev_installation.py
tests/: README.md  README_zh.md  __init__.py  __main__.py  automation_guide.md  test_dev_installation.py
(+515 files in other folders)
