[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["axisfuzzy*"]
exclude = ["todo*", "assets*", "notebook*", "test*", "tests*", "doc*", "docs*", "examples*"]

[project]
name = "axisfuzzy"
version = "0.1.1"
description = "A high-performance Python library for fuzzy number and fuzzy array computations"
requires-python = ">=3.13"
# Core dependencies: Keep it lightweight, including only the essential dependencies for fuzzy computation.
dependencies = [
    "numpy>=2.2.6", # 核心数值计算
    "numba>=0.61.2",
]

# Optional dependencies: grouped by functional modules
[project.optional-dependencies]
# Analysis and visualization dependencies
analysis = [
    "pandas>=2.3.2",
    "pandas-stubs==2.3.0.250703",
    "matplotlib>=3.10.5",
    "networkx>=3.0",
    "pydot>=1.4.0",
]

# Development and testing dependencies
dev = [
    "pytest>=8.4.1",
    "notebook>=7.4.5",
]

# Documentation dependencies
docs = [
    "sphinx>=7.0.0",
    "sphinx-copybutton>=0.5.0",
    "sphinx-design>=0.5.0",
    "sphinx-autodoc-typehints>=3.0",
    "sphinx-tabs>=3.4.0",
    "myst-parser>=2.0.0",
    "babel>=2.14.0",
    "pydata-sphinx-theme>=0.16.1",
]

# Full user installation: includes analysis features
# 完整安装：包含所有功能
all = [
    "axisfuzzy[analysis]",
    "axisfuzzy[dev]",
    "axisfuzzy[docs]",
]
